--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,5 +1,4 @@
 .experience {
-  padding: 5rem 0;
   transition: all 0.3s ease;
   position: relative;
 }
@@ -40,7 +39,7 @@
 
 .timeline-item.left {
   left: 0;
-  text-align: right;
+  text-align: left;
 }
 
 .timeline-item.right {
